updated github links

--- a/club/index.html
+++ b/club/index.html
@@ -7,7 +7,7 @@ layout: default
 <h1>Arduino Club</h1>
 
 <p>
-At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href='https://joeiddon.github.io/projects/arduino/about'>Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
+At the end of the 2017 Summer Term, I was granted some money to start a club revolving around Arduinos. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
 </p>
 
 <p>
@@ -16,6 +16,10 @@ To keep track of what we spend the money on, <a href='https://joeiddon.github.io
 
 <p>
 The images below are linked to their corresponding projects so feel free to take a look at what we have been up to.
+</p>
+
+<p>
+All the code we have written is available <a href='https://github.com/joeiddon/arduino_clun'>here on GitHub</a>.
 </p>
 
 <table>
