--- a/club/log.html
+++ b/club/log.html
@@ -25,7 +25,8 @@ var rws = [
 ["6x SG92R Servos",           "16.43"             ],
 ["4x L298n Motor Driver",     "9.59"              ],
 ["8x Geared Motors",          "17.54"             ],
-["120x Male, Female Jumpers", "2.82"              ]
+["120x Male, Female Jumpers", "2.82"              ],
+["340x Assorted M3 Bolts",    "4.46"              ]
 ]
 for (var r = 2; r < rws.length; r++){
 	console.log(r)
