--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -12,31 +12,31 @@ layout: default
 <table><tbody>
   <tr>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/slide_robot_arm'>
+      <a href='slide_robot_arm'>
       <img class='project_img' src='/images/thumbnails/slide_robot_arm.jpg'></img>
       </a>
     </td>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/violent_robot_arm'>
+      <a href='violent_robot_arm'>
       <img class='project_img' src='/images/thumbnails/violent_robot_arm.jpg'></img>
       </a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/quadruped'>
+      <a href='quadruped'>
       <img class='project_img' src='/images/thumbnails/quadruped.png'></img>
       </a>
     </td>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/bitcoin'>
+      <a href='bitcoin'>
       <img class='project_img' src='/images/thumbnails/bitcoin.jpg'></img>
       </a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/laser'>
+      <a href='laser'>
       <img class='project_img' src='/images/thumbnails/laser.jpg'></img>
       </a>
     </td>
