--- a/projects/other/index.html
+++ b/projects/other/index.html
@@ -17,7 +17,7 @@ As with the other pages, click the thumbnails to see what they're about.
 <table><tbody>
   <tr>
     <td>
-      <a href='https://joeiddon.github.io/projects/arduino/useless_box'>
+      <a href='useless_box'>
       <img class='project_img' src='/images/thumbnails/useless_box.jpg'></img>
       </a>
     </td>
