--- a/projects/other/useless_box.html
+++ b/projects/other/useless_box.html
@@ -28,18 +28,43 @@ As usual I used OpenSCAD to make the design for my 3d printer (I'll make the cod
 
 <p> Here are some images of it printing:</p>
 
-<img src='/images/useless_box/printing_top.jpg'
-><img src='/images/useless_box/printing_closeup.jpg'
-><img src='/images/useless_box/printing_side.jpg'>
+<img class='third_img'  src='/images/useless_box/printing_top.jpg'
+><img class='third_img' src='/images/useless_box/printing_closeup.jpg'
+><img class='third_img' src='/images/useless_box/printing_side.jpg'>
 
 <p>Here is some images of the printed model:</p>
 
-<img src='/images/useless_box/printed_corner.jpg'
-><img src='/images/useless_box/printed_parts_side.jpg'
-><img src='/images/useless_box/printed_top.jpg'>
+<img class='third_img'  src='/images/useless_box/printed_corner.jpg'
+><img class='third_img' src='/images/useless_box/printed_parts_side.jpg'
+><img class='third_img' src='/images/useless_box/printed_top.jpg'>
 
 <p>In particular, the part of the design that I am most proud of is the hinge. It has rounded corners on the back edge so that the lid can rotate around it, pivoting on the two 3mm screws that act as the hinge. Here it is:</p>
 
 <img src='/images/useless_box/hinge.jpg'>
 
-<p>As for the electronics, I needed to remove the circuit board from an old servo so that I could use it as just a regular DC Motor (but with the much-needed gearing that the servo provides). In addition, 
+<p>As for the electronics, I needed to remove the circuit board from an old servo so that I could use it as just a regular DC Motor (but with the much-needed gearing that the servo provides). In addition, the potentiometer (which is the input to the circuit board's control mechanism and acts as an axel for the cogs in the gearbox) only rotates <code>180</code> degrees. However, with some slight modification (ripping of a metal bracket on the front), I got the potentometer to free-spin so even though it remained locked to the outer cog, the outer cog could still turn indefinitely. Finally, two of the teeth from one of the cogs in this broken servo that I disassembled has been broken off so I stole the equivalent cog from a different servo that had failed for a different reason.</p>
+
+<p>Here are some images of that process (the removal of the circuit board, the removed metal bit from the potentiometer and the destruction of what ended up being three failed servos):</p>
+
+<img class='third_img'  src='/images/useless_box/servo_deconstructed.jpg'
+><img class='third_img' src='/images/useless_box/servo_potentiometer.jpg'
+><img class='third_img' src='/images/useless_box/servo_destruction.jpg'>
+
+<p>And here are two more images of the gear mechanism and it being screwed back together again:</p>
+
+<img class='half_img'  src='/images/useless_box/servo_gears.jpg'
+><img class='half_img' src='/images/useless_box/servo_screws.jpg'>
+
+<p>Then for the rest of the electronics, it was simply a matter of wiring the push to break endstop up to the 6 pin toggle switch in such a way that the motor always turned towards the switch whilst the switch was flipped one way and then only turned back towards the endstop whilst the endstop was not pressed.</p>
+
+<p>Here is a rather unneat diagram of that setup:</p>
+
+<img src='/images/useless_box/circuit.jpg'>
+
+<p>And that was about it. Here are some final images of the finished box:</p>
+
+<img class='half_img'  src='/images/useless_box/corner.jpg'
+><img class='half_img' src='/images/useless_box/open_lid.jpg'>
+
+<img class='half_img'  src='/images/useless_box/side.jpg'
+><img class='half_img' src='/images/useless_box/back.jpg'>
