--- a/projects/other/useless_box.html
+++ b/projects/other/useless_box.html
@@ -61,6 +61,10 @@ As usual I used OpenSCAD to make the design for my 3d printer (I'll make the cod
 
 <img src='/images/useless_box/circuit.jpg'>
 
+<p>And here are the electronics all soldered together (I used coiled copper wire for the battery terminals):</p>
+
+<img src='/images/useless_box/electronics.jpg'>
+
 <p>And that was about it. Here are some final images of the finished box:</p>
 
 <img class='half_img'  src='/images/useless_box/corner.jpg'
