tidy up and began cars post

--- a/club/snake.html
+++ b/club/snake.html
@@ -65,4 +65,4 @@ Here are some photos of the finished product, and finally a video of it in actio
 ><img class='third_img' src='/images/club/snake/bottom.jpg'
 ><img class='third_img' src='/images/club/snake/top.jpg'>
 
-<video src='/videos/snake_game.mp4' controls='controls'></video>
+<video src='/videos/club/snake_game.mp4' controls></video>
