--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -23,7 +23,7 @@ The projects aim was to display the current bitcoin price in binary over some ro
 
 <p>I tested the circuit with some jumpers:</p>
 
-<video src='/videos/led_grid_test.mp4' controls='controls'></video>
+<video src='/videos/led_grid_test.mp4' controls></video>
 
 <p>I then just needed to finish writing the code (<a href='https://github.com/joeiddon/bitcoin_in_binary'>GitHub</a>) and connnect an old 1S lipo from a quadcopter and it was working!</p>
 
