--- a/projects/arduino/laser.html
+++ b/projects/arduino/laser.html
@@ -18,7 +18,7 @@ layout: default
 
 <p>Here is a video of me breaking the beam:</p>
 
-<video src='/videos/laser_gate.mp4' controls='controls'></video>
+<video src='/videos/laser_gate.mp4' controls></video>
 
 <p>Finally, I realised that when the device was held close to a solid surface, the reflection of the LASER's light off the surface was enough to be noticable by the Arduino. I modified the simple code (merely adjusting a threshold #define) and now it worked as a proximity sensor!</p>
 
@@ -26,4 +26,4 @@ layout: default
 
 <p>Here is a video showing the proximity sensing functionality:</p>
 
-<video src='/videos/proximity_laser.mp4' controls='controls'></video>
+<video src='/videos/proximity_laser.mp4' controls></video>
