--- a/projects/arduino/violent_robot_arm.html
+++ b/projects/arduino/violent_robot_arm.html
@@ -53,7 +53,7 @@ Now I had a good way of controlling the motion of it, I could hardcode some set 
 Here is a short video of one of its first attempts at setting up just the pawns.
 </p>
 
-<video src='/videos/pawn_fail.mp4' controls='controls'></video>
+<video src='/videos/pawn_fail.mp4' controls></video>
 
 <p>
 Baring in mind that I had to manually control the arm to each position working out where everything should go, this wasn't too bad an effort. But I knew that if I had to do this for all the other pieces and improve the current motor angles for the pawns, that this would take a while.
@@ -67,10 +67,10 @@ So in an effort to speed up the process, I put the project on hold and created a
 This was the finnished result:
 </p>
 
-<video src='/videos/tkinter_arm_control.mp4' controls='controls'></video>
+<video src='/videos/tkinter_arm_control.mp4' controls></video>
 
 <p>
 Finally I had an easy way of setting the arm in differnt positions so I got to work neatening the pawns and making the positions for the back line pieces. Unfortunately though, I accounted a new error - my robot had Parkinson's disease. At a distance, the weight of the arm meant the second from the bottom (number 4) motor got into a PID control loop and began oscilating. As a result, picking up pieces at a reach like the queen and the king proved difficult and the arm had poor repeatability at that distance. Anyway, I continued on and this was the final result. Not perfect but the best it could achieve.
 </p>
 
-<video src='/videos/chess_setup.mp4' controls='controls'></video>
+<video src='/videos/chess_setup.mp4' controls></video>
