--- a/projects/arduino/quadruped.html
+++ b/projects/arduino/quadruped.html
@@ -8,7 +8,7 @@ layout: default
 
 <p>Here is my "research" video that I took to base the project off:</p>
 
-<video src='/videos/newt_research.mp4' controls='controls'></video>
+<video src='/videos/newt_research.mp4' controls></video>
 
 <p>I then began building the thing. The frame was to be made out of 3mm plywood which would be easy to cut to the right shapes for the different parts.  Then, each leg neeeded 2 motors so with 4 legs, I ended up using 8 <a href="https://servodatabase.com/servo/towerpro/sg90">sg90</a> servo motors as they are cheap and have sufficient torque for this application. Finally, I used a HC-SR04 ultrasonic sensor to allow the robot to sense obstacles (and hopefully avoid walls).</p>
 
@@ -25,14 +25,14 @@ layout: default
 <p>Here is a video showing that motion:</p>
 
 
-<video src='/videos/quadruped_eyes.mp4' controls='controls'></video>
+<video src='/videos/quadruped_eyes.mp4' controls></video>
 
 <p>Finally, I just needed to write some simply code so that the robot turned (using a technique of putting two legs on one side together and pushing around on the other) whenever a wall/object got detected by the ultrasonic sensor.</p>
 
 <p>Here is a video of it doing some walking then turning when it sensors the white wall in its path:</p>
 
-<video src='/videos/quadruped_walk.mp4' controls='controls'></video>
+<video src='/videos/quadruped_walk.mp4' controls></video>
 
 <p>And a sped up videos of the robot navigating about its pen:</p>
 
-<video src='/videos/quadruped_timelapse.mp4' controls='controls'></video>
+<video src='/videos/quadruped_timelapse.mp4' controls></video>
