--- a/projects/arduino/slide_robot_arm.html
+++ b/projects/arduino/slide_robot_arm.html
@@ -8,4 +8,4 @@
 The basis of this project was to create a simple robot arm controlled by an arduino (nano) to lift a small object up to the top of a slide, drop it, and pick it up at the beggining. Then repeat. I considered printing the frame for the arm, but as I knew it would need to be altered and that the grabber would be difficult to design, a cut it out of some spare wood I had around. As for the motors, I has some 9g TowerPro Servos which I coul use. Finally I made the gripper out of a bent zip tie and some wire to pull it shut. After some simple coding to move the servos between set positions, this was the result:
 </p>
 
-<video src='/videos/slide_arm.mp4' controls='controls'></video>
+<video src='/videos/slide_arm.mp4' controls></video>
