link to cars post!

--- a/club/index.html
+++ b/club/index.html
@@ -25,13 +25,20 @@ All the code we have written is available <a href='https://github.com/joeiddon/a
 <table>
   <tr>
     <td>
-      <a href='https://joeiddon.github.io/club/snake'>
+      <a href='snake'>
       <img class='project_img' src='/images/club/thumbnails/snake.jpg'></img>
       </a>
     </td>
     <td>
-      <a href='https://joeiddon.github.io/club/hexapod'>
+      <a href='hexapod'>
       <img class='project_img' src='/images/club/thumbnails/hexapod.jpg'></img>
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href='cars'>
+      <img class='project_img' src='/images/club/thumbnails/cars.jpg'></img>
       </a>
     </td>
   </tr>
