img needs display block for margin: auto

--- a/club/hexapod.html
+++ b/club/hexapod.html
@@ -61,7 +61,7 @@ At first, it looked promising...
 
 <p>Here is a picture of our (<em>terrible</em>) plan for that:</p>
 
-<img style='width: 50%; margin: auto;' src='/images/club/hexapod/diagram.jpg'></img>
+<img style='width: 50%; display: block; margin: auto;' src='/images/club/hexapod/diagram.jpg'></img>
 
 <p>However, after tinkering with the board and the code for many a week, we were on the verge of giving up since the aforementioned problem of the eratic behaviour was impossible to work with. Amongst other things, we even tried eliminating the PCA9685 servo controller board entirely and dedicated a GPIO pin to each individual servo (this took a fair amount of soldering work!), but to no avail.<p>
 
