updated hexpapod profile pic

--- a/club/index.html
+++ b/club/index.html
@@ -31,7 +31,7 @@ All the code we have written is available <a href='https://github.com/joeiddon/a
     </td>
     <td>
       <a href='hexapod'>
-      <img class='project_img' src='/images/club/thumbnails/hexapod.jpg'></img>
+      <img class='project_img' src='/images/club/thumbnails/hexapod.png'></img>
       </a>
     </td>
   </tr>
