--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ layout: default
 <h2>Me</h2>
 
 <p>
-I dabble in some <code>JavaScript</code>, <code>Python</code> and some <code>C++</code>. I've also played in some other languages like <code>ML</code> and <code>Java</code> but wouldn't consider myself proficient in them. In addition, I know enough <code>OpenScad</code> to allow me to code the 3d designs that I send to my 3d printer.
+I dabble in some <code>JavaScript</code>, <code>Python</code> and some <code>C++</code>. I've also played in some other languages like <code>ML</code> and <code>Java</code> but wouldn't consider myself proficient in them. In addition, I know enough <code>OpenScad</code> to allow me to code the 3d designs that I send to my printer.
 </p>
 
 <p>In my spare time, you will find me over on <code>stackoverflow.com</code>. I have built up <a href='https://stackoverflow.com/u/7434365'>a reasonable standing there</a> (<code>10,000</code> reputation, and about <code>700</code> posts) and my claim to fame is that one week I had gained the second most reputation out of the nine million users, surpassing Jon Skeet, however I must admit that I spent nearly that entire week on the site - hitting the <code>200</code> rep cap (excluding accepts) every day and that is way above my usual commitment. The majority of questions I answer there are Python-based as these are commonly asked and I enjoy helping out new coders who often pick this language to get into programming.
