redesigned front page (feedback form)

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ I dabble in some <code>JavaScript</code>, <code>Python</code> and some <code>C++
 
 <h2>The Website</h2>
 
-<p>This website was created on June 13th, 2017. Since the initial formatting, I have been using it to collate my projects. You can view the source <a href='https://github.com/joeiddon/joeiddon.github.io'>here on GitHub</a> which is  where I make as much as my code as possible publicly available as well.</p>
+<p>This website was created on June 13th, 2017 with usability the priority over design. Since the initial formatting, I have slowly been collating my projets here. You can view the source <a href='https://github.com/joeiddon/joeiddon.github.io'>here on GitHub.</a></p>
 
 <p>It is hosted by Github (hence the <code>.github.io</code> domain name). My original aim was to write the entire thing from scratch, however the HTML and CSS for the banner (menu) at the top and the styling is all identical for every page on the site so it would be ideal to have the http server insert each post between these two HTML snippets. I did, in the future, write a Python TCPServer that inherited from the <code>http.BaseHTTPRequestHandler</code> which implemented this functionality, however to have my whole site hosted from, for instance, a Google VM instance would end up being slow and/or cost money. So as a result, I settled on sticking with Github.</p>
 
