--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Since I haven't posted any contact details, there is no method for any comments/
 Type what you want in the text area below, click the <code>send</code> button, and I'll read it!
 </p>
 
-<input type='textarea' id='input' style='width:500px; height:100px;'></input>
+<textarea id='input' style='width:500px; height:100px;'></textarea>
 <div>
   <input type='button' id='button' value='send'></input>
   <div id='status' style='color:orange;display:inline-block;'>status: awaiting</div>
