--- a/projects/arduino/quadropod.html
+++ b/projects/arduino/quadropod.html
@@ -25,14 +25,14 @@ layout: default
 <p>Here is a video showing that motion:</p>
 
 
-<video src='/videos/quadruped_eyes.mp4' controls></video>
+<video src='/videos/quadrupod_eyes.mp4' controls></video>
 
 <p>Finally, I just needed to write some simply code so that the robot turned (using a technique of putting two legs on one side together and pushing around on the other) whenever a wall/object got detected by the ultrasonic sensor.</p>
 
 <p>Here is a video of it doing some walking then turning when it sensors the white wall in its path:</p>
 
-<video src='/videos/quadruped_walk.mp4' controls></video>
+<video src='/videos/quadrupod_walk.mp4' controls></video>
 
 <p>And a sped up videos of the robot navigating about its pen:</p>
 
-<video src='/videos/quadruped_timelapse.mp4' controls></video>
+<video src='/videos/quadrupod_timelapse.mp4' controls></video>
