renamed everything to quadrupod.*g

--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -24,7 +24,7 @@ layout: default
   </tr>
   <tr>
     <td>
-      <a href='quadruped'>
+      <a href='quadrupod'>
       <img class='project_img' src='/images/thumbnails/quadrupod.png'></img>
       </a>
     </td>
