--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ My name is Joe, and this website is the home to my projets.
 Use the top navigation tabs to explore the site - in particular the <code>about</code> section for something on me.
 </p>
 
-<p><strong>!NEW!</strong></p>
+<hr>
+
+<h3>Requesting Feedback</h3>
 
 <p>
 Since I haven't posted any contact details, there is no method for any comments/suggestions on any of my work. Yes I could use a third-party like Disqus, but services which require you to sign-in discourage me from dropping a short comment (also I like to write everyhing myself), so instead I wrote a short (like <code>30</code> line) HTTPS server that accepts the POST requests which you send below, and writes them to a log.
@@ -31,6 +33,8 @@ Type what you want in the text area below, click the <code>send</code> button, a
 <p><em>
 Note that this is merely simplex communication. I.e. you can send me messages, but I can't send you anything. Of course, if you were to send an email address or similar, I could get back to you.
 </em></p>
+
+<hr>
 
 <p>
 Finally, to increase the cat to non-cat content on the web, here's mine:
