balancing robot post

--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -29,8 +29,8 @@ layout: default
       </a>
     </td>
     <td>
-      <a href='bitcoin'>
-      <img class='project_img' src='/images/thumbnails/bitcoin.jpg'></img>
+      <a href='balancing_robot'>
+      <img class='project_img' src='/images/thumbnails/balancing_robot.jpg'></img>
       </a>
     </td>
   </tr>
@@ -38,6 +38,11 @@ layout: default
     <td>
       <a href='laser'>
       <img class='project_img' src='/images/thumbnails/laser.jpg'></img>
+      </a>
+    </td>
+     <td>
+      <a href='bitcoin'>
+      <img class='project_img' src='/images/thumbnails/bitcoin.jpg'></img>
       </a>
     </td>
   </tr>
